# linqt

./: CMakeLists.txt  README  toolchain-gcc.cmake
include/: Kubo_solver_FFT.hpp  chebyshev_moments.hpp  chebyshev_moments1D.hpp  chebyshev_moments2D.hpp  chebyshev_momentsTD.hpp  constants.hpp  linear_algebra.hpp  sparse_matrix.hpp  types.hpp
src/: #Kubo_solver_FFT.cpp#  #inline_compute-kpm-Kubo-FFT.cpp#  .#Kubo_solver_FFT.cpp  Bastin_FFTs.cpp  CMakeLists.txt  Greenwood_FFTs.cpp  Kubo_solver_FFT.cpp  Kubo_solver_FFT_postProcess.cpp  chebyshev_moments1D.cpp  chebyshev_moments2D.cpp  chebyshev_momentsTD.cpp  chebyshev_vectors.cpp  inline_compute-Kubo-kpm-FFT.cpp  kpm_spectral_green_function.cpp  mkl_linear_algebra.cpp  sparse_matrix.cpp
